--- a/FE/src/app/admin/add-technician/add-technician.component.html
+++ b/FE/src/app/admin/add-technician/add-technician.component.html
@@ -1,10 +1,13 @@
 <app-screen-cont [title]="'הוספת תכנאי'" [breadscrums]="breadscrums" >
     <form #formInfo="ngForm" class="form m-4"  [formGroup]="TechnicianForm">
-          <div class="col-md-12 col-sm-12" style="margin-left: 1200px;">
-            
+          <div class="col-md-12 col-sm-12">
+            <mat-form-field style="margin:10px; width:250px" appearance="fill">
+              <mat-label>שם עובד</mat-label>
+              <input matInput [(ngModel)]="newtechnician.userName" [formControl]="TechnicianForm.get('name')"   required>
+            </mat-form-field>
             <mat-form-field class="" style="margin:10px; width:250px" appearance="fill" >
                 <mat-label class="">מס טלפון</mat-label>
-                <input matInput [(ngModel)]="newtechnician.phone" [formControl]="TechnicianForm.get('phone')"  required>
+                <input matInput [(ngModel)]="newtechnician.userPhone" [formControl]="TechnicianForm.get('phone')"  required>
             </mat-form-field>
 
             <mat-form-field style="margin:10px; width:250px" appearance="fill">
@@ -12,18 +15,15 @@
                 <input matInput [(ngModel)]="newtechnician.socialId" [formControl]="TechnicianForm.get('socialId')"   required>
               </mat-form-field>
 
-              <mat-form-field style="margin:10px; width:250px" appearance="fill">
-                <mat-label>שם עובד</mat-label>
-                <input matInput [(ngModel)]="newtechnician.name" [formControl]="TechnicianForm.get('name')"   required>
-              </mat-form-field>
+              
 
              
           </div>
 
-          <div class="col-md-12 col-sm-12" style="margin-left: 1470px;">
+          <div class="col-md-12 col-sm-12">
             <mat-form-field style="margin:10px; width:250px" appearance="fill">
               <mat-label>כתובת מגורים</mat-label>
-              <input matInput [(ngModel)]="newtechnician.address" [formControl]="TechnicianForm.get('address')"   required>
+              <input matInput [(ngModel)]="newtechnician.userAddress" [formControl]="TechnicianForm.get('address')"   required>
             </mat-form-field>
             <!-- </div> -->
 
@@ -35,15 +35,11 @@
               </mat-form-field>
 
           </div>
-          <div class="col-md-12 col-sm-12" style="margin-left: 1470px;">
+          <div class="col-md-12 col-sm-12">
+           
             <mat-form-field style="margin:10px; width:250px" appearance="fill">
-                <mat-label>סוג עובד</mat-label>
-                <mat-select [(ngModel)]="newtechnician.workerType" [formControl]="TechnicianForm.get('workerType')" placeholder="סוג עובד">
-                    <mat-option value="מנהל אזור">מנהל אזור</mat-option>
-                    <mat-option value="מנהל צוות">מנהל צוות</mat-option>
-                    <mat-option value="טכנאי">טכנאי</mat-option>
-
-                </mat-select>
+              <mat-label>סיסמה</mat-label>
+              <input matInput [(ngModel)]="newtechnician.userPassword" [formControl]="TechnicianForm.get('password')"   required>
             </mat-form-field>
 
             <mat-form-field style="margin:10px; width:250px" appearance="fill" >
@@ -67,7 +63,7 @@
 
 
         <div class="row">
-          <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2" style="margin:10px ;margin-left: 1800px;">
+          <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
             <button class="btn-space" (click)= 'addTechinician()' [disabled]="TechnicianForm.invalid" mat-raised-button
               color="primary">הרשמה</button>
               <button class="btn-space" (click)="backToList()"  mat-raised-button
