--- a/FE/src/app/admin/all-technician/all-technician.component.html
+++ b/FE/src/app/admin/all-technician/all-technician.component.html
@@ -48,7 +48,7 @@
            <ng-container matColumnDef="name">
              <mat-header-cell *matHeaderCellDef mat-sort-header>שם
              </mat-header-cell>
-             <mat-cell *matCellDef="let row">{{row.name}}</mat-cell>
+             <mat-cell *matCellDef="let row">{{row.userName}}</mat-cell>
            </ng-container>
            <!-- socialId Column -->
            <ng-container matColumnDef="socialId">
@@ -61,7 +61,7 @@
            <ng-container matColumnDef="phone">
              <mat-header-cell *matHeaderCellDef mat-sort-header>נייד
              </mat-header-cell>
-             <mat-cell *matCellDef="let row"> {{row.phone}}
+             <mat-cell *matCellDef="let row"> {{row.userPhone}}
              </mat-cell>
            </ng-container>
            <!-- address Column -->
@@ -69,7 +69,7 @@
             <mat-header-cell *matHeaderCellDef mat-sort-header>כתובת
             </mat-header-cell>
             <mat-cell *matCellDef="let row">
-             {{row.address}}</mat-cell>
+             {{row.userAddress}}</mat-cell>
           </ng-container>
 <!-- email Column -->
           <ng-container matColumnDef="email">
@@ -77,14 +77,6 @@
             </mat-header-cell>
             <mat-cell *matCellDef="let row">
                {{row.email}}</mat-cell>
-          </ng-container>
-
-          <!-- workerType Column -->
-          <ng-container matColumnDef="workerType">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>סוג תכנאי
-            </mat-header-cell>
-            <mat-cell *matCellDef="let row">
-              {{row.workerType}}</mat-cell>
           </ng-container>
 <!-- jobRole Column -->
           <ng-container matColumnDef="jobRole">
