--- a/FE/src/app/admin/update-technician/update-technician.component.html
+++ b/FE/src/app/admin/update-technician/update-technician.component.html
@@ -1,10 +1,13 @@
 <app-screen-cont [title]="'עדכון טכנאי'" [breadscrums]="breadscrums">
     <form #formInfo="ngForm" class="form m-4"  [formGroup]="TechnicianForm">
-        <div class="col-md-12 col-sm-12" style="margin-left: 1200px;">
-          
+        <div class="col-md-12 col-sm-12">
+          <mat-form-field style="margin:10px; width:250px" appearance="fill">
+            <mat-label>שם עובד</mat-label>
+            <input matInput [(ngModel)]="updateTechnician.userName" [formControl]="TechnicianForm.get('name')"   required>
+          </mat-form-field>
           <mat-form-field class="" style="margin:10px; width:250px" appearance="fill" >
               <mat-label class="">מס טלפון</mat-label>
-              <input matInput [(ngModel)]="updateTechnician.phone" [formControl]="TechnicianForm.get('phone')"  required>
+              <input matInput [(ngModel)]="updateTechnician.userPhone" [formControl]="TechnicianForm.get('phone')"  required>
           </mat-form-field>
 
           <mat-form-field style="margin:10px; width:250px" appearance="fill">
@@ -12,18 +15,15 @@
               <input matInput [(ngModel)]="updateTechnician.socialId" [formControl]="TechnicianForm.get('socialId')"   required>
             </mat-form-field>
 
-            <mat-form-field style="margin:10px; width:250px" appearance="fill">
-              <mat-label>שם עובד</mat-label>
-              <input matInput [(ngModel)]="updateTechnician.name" [formControl]="TechnicianForm.get('name')"   required>
-            </mat-form-field>
+           
 
            
         </div>
 
-        <div class="col-md-12 col-sm-12" style="margin-left: 1470px;">
+        <div class="col-md-12 col-sm-12">
           <mat-form-field style="margin:10px; width:250px" appearance="fill">
             <mat-label>כתובת מגורים</mat-label>
-            <input matInput [(ngModel)]="updateTechnician.address" [formControl]="TechnicianForm.get('address')"   required>
+            <input matInput [(ngModel)]="updateTechnician.userAddress" [formControl]="TechnicianForm.get('address')"   required>
           </mat-form-field>
           <!-- </div> -->
 
@@ -35,15 +35,10 @@
             </mat-form-field>
 
         </div>
-        <div class="col-md-12 col-sm-12" style="margin-left: 1470px;">
+        <div class="col-md-12 col-sm-12" >
           <mat-form-field style="margin:10px; width:250px" appearance="fill">
-              <mat-label>סוג עובד</mat-label>
-              <mat-select [(ngModel)]="updateTechnician.workerType" [formControl]="TechnicianForm.get('workerType')" placeholder="סוג עובד">
-                  <mat-option value="מנהל אזור">מנהל אזור</mat-option>
-                  <mat-option value="מנהל צוות">מנהל צוות</mat-option>
-                  <mat-option value="טכנאי">טכנאי</mat-option>
-
-              </mat-select>
+            <mat-label>סיסמה</mat-label>
+            <input matInput [(ngModel)]="updateTechnician.userPassword" [formControl]="TechnicianForm.get('password')"   required>
           </mat-form-field>
 
           <mat-form-field style="margin:10px; width:250px" appearance="fill" >
