--- a/FE/src/app/admin/attach-technician-to-requests/attach-technician-to-requests.component.html
+++ b/FE/src/app/admin/attach-technician-to-requests/attach-technician-to-requests.component.html
@@ -1,5 +1,65 @@
 <app-screen-cont [title]="'לצרף טכנאי ל פניות'" [breadscrums]="breadscrums" >
 
-<app-technicians-selector></app-technicians-selector>
-</app-screen-cont>
-
+  <app-technicians-selector style="margin-right: 43%;" (onTechnicianSelected)="technicianWasSelected($event)"></app-technicians-selector>
+  
+  <section class="content">
+      <div class="content-block" style="    margin-left: 100px;">
+  
+          <div class="header" style="  display: flex;
+          justify-content: center;">
+            <h1>תכנאי :{{technician.userName}}</h1>
+          </div>
+          <div class="body">
+  
+  
+            <div class="row">
+              <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="width:40%">
+                  <h4 style="margin-right: 100px" >בקשה זמינה</h4>                    
+                <div class="board" style="margin-left: 35%;width:250px;height:300px; background-color: rgb(245, 248, 250);border: 0.1px solid #078fae45">                
+                  <div class="cards" id="right"  >                                        
+                    <div class="container"  (click)="selectRequest(Requset.id)" [value]=requsetCustomer.id *ngFor="let Requset of requsetCustomer">                          
+                      <div class="drop-card" >                        
+                          <span class="table-img msg-user">  </span>                    
+                        <span class="cardtitle noselect"> {{Requset.deviceType}}-{{Requset.id}}-{{Requset.CustomerName}}</span></div>    
+                    </div>            
+                  </div> 
+                </div>
+              </div>
+  
+              
+          
+              <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="width:10%"> 
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br> 
+                  <div  style="margin-left:30% ; width:1500px">  
+                    צרף בקשה: {{selectedRequsetId.id}}  
+                  </div>          
+                  <button class="btn-space"   style="margin-left:50% ;" mat-raised-button
+                        color="primary" (click)="attachReqToTechni()">לְצרף</button>
+  
+              
+          </div>
+              <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="width:40% ">
+                  <h4 style="margin-right: 100px">בקשות לינקדאין</h4>
+                <div class="board" style="margin-left:30%;width:250px;height:300px;background-color: rgb(245, 248, 250);border: 0.1px solid #078fae45">
+                  <div class="cards" id="left" >
+                    <div class="container"  *ngFor="let Requsets of requestsLinked">
+                      <div class="drop-card" >                        
+                          <span class="table-img msg-user">  </span>                    
+                        <span class="cardtitle noselect"> {{Requsets.deviceType}}-{{Requsets.id}}-{{Requsets.CustomerName}}</span></div>    
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+  </section>
+     
+  
+  </app-screen-cont>
+  
+  
