--- a/FE/src/app/admin/about-technician/about-technician.component.html
+++ b/FE/src/app/admin/about-technician/about-technician.component.html
@@ -48,7 +48,7 @@
            <ng-container matColumnDef="isComplete">
             <mat-header-cell *matHeaderCellDef mat-sort-header>פניה
             </mat-header-cell>
-            <mat-cell *matCellDef="let row" >{{row.iscomplete ? 'סגורה':'פתוחה'}}</mat-cell>
+            <mat-cell *matCellDef="let row" >{{row.complete ? 'סגורה':'פתוחה'}}</mat-cell>
           </ng-container>
            <!-- CustomerName Column -->
            <ng-container matColumnDef="CustomerName">
