--- a/FE/src/app/technician/my-requests/my-requests.component.html
+++ b/FE/src/app/technician/my-requests/my-requests.component.html
@@ -40,7 +40,7 @@
            <ng-container matColumnDef="isComplete">
             <mat-header-cell *matHeaderCellDef mat-sort-header>פניה
             </mat-header-cell>
-            <mat-cell *matCellDef="let row" >{{row.iscomplete ? 'סגורה':'פתוחה'}}</mat-cell>
+            <mat-cell *matCellDef="let row" >{{row.complete ? 'סגורה':'פתוחה'}}</mat-cell>
           </ng-container>
            <!-- CustomerName Column -->
            <ng-container matColumnDef="CustomerName">
@@ -101,7 +101,7 @@
             <mat-header-cell *matHeaderCellDef mat-sort-header>תשובה מעבדה
             </mat-header-cell>
             <mat-cell *matCellDef="let row">
-             {{row.Answerdate}}</mat-cell>
+             {{answerTechnician.Answerdate}}</mat-cell>
           </ng-container>
 
            <!-- actions -->
