--- a/FE/src/app/layout/header/header.component.html
+++ b/FE/src/app/layout/header/header.component.html
@@ -82,7 +82,7 @@
         </li>
         <li class="nav-item user_profile" ngbDropdown>
           <div class="chip dropdown-toggle" ngbDropdownToggle class="nav-notification-icons pt-0">
-            <img src={{user.image}} class="user_img" width="32" height="32" alt="User">
+            <img src={{userImg}} class="user_img" width="32" height="32" alt="User">
             <span>{{user.userName}}</span>
           </div>
           <div ngbDropdownMenu class="notification-dropdown pullDown">
@@ -91,7 +91,7 @@
                 <li class="body">
                   <ul class="user_dw_menu">
                     <li>
-                      <a [routerLink]="['customer/customerDetails',user.id]">
+                      <a [routerLink]="['customer/customerDetails']">
                         <app-feather-icons [icon]="'user'" [class]="'user-menu-icons'"></app-feather-icons>Account
                       </a>
                     </li>
