--- a/FE/src/app/admin/add-technician/add-technician.component.html
+++ b/FE/src/app/admin/add-technician/add-technician.component.html
@@ -34,15 +34,19 @@
                 <input matInput [(ngModel)]="newtechnician.email" [formControl]="TechnicianForm.get('email')"   required>
               </mat-form-field>
 
+              <mat-form-field style="margin:10px; width:250px" appearance="fill">
+                <mat-label>סיסמה</mat-label>
+                <input matInput [type]="hide ? 'password' : 'text'" [(ngModel)]="newtechnician.userPassword" [formControl]="TechnicianForm.get('password')"   required>
+                <mat-icon matSuffix (click)="hide = !hide">
+                  {{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+              </mat-form-field>
+
           </div>
+
+         
           <div class="col-md-12 col-sm-12">
            
-            <mat-form-field style="margin:10px; width:250px" appearance="fill">
-              <mat-label>סיסמה</mat-label>
-              <input matInput [type]="hide ? 'password' : 'text'" [(ngModel)]="newtechnician.userPassword" [formControl]="TechnicianForm.get('password')"   required>
-              <mat-icon matSuffix (click)="hide = !hide">
-                {{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-            </mat-form-field>
+            
 
             <mat-form-field style="margin:10px; width:250px" appearance="fill" >
                 <mat-label>תפקיד טכנאי</mat-label>
@@ -54,7 +58,8 @@
                 </mat-select>
             </mat-form-field>
 
-
+            <mat-icon (click)="fileInput.click()">add_a_photo</mat-icon>
+            <input #fileInput formControlName="userImage" type="button" [(ngModel)]="newtechnician.image" (click)="onFileInput()"  style="display:none;" />
 
         </div>
 
