--- a/FE/src/app/admin/update-technician/update-technician.component.html
+++ b/FE/src/app/admin/update-technician/update-technician.component.html
@@ -34,14 +34,16 @@
               <input matInput [(ngModel)]="updateTechnician.email" [formControl]="TechnicianForm.get('email')"   required>
             </mat-form-field>
 
+            <mat-form-field style="margin:10px; width:250px" appearance="fill">
+              <mat-label>סיסמה</mat-label>
+              <input matInput [type]="hide ? 'password' : 'text'" [(ngModel)]="updateTechnician.userPassword" [formControl]="TechnicianForm.get('password')"   required>
+              <mat-icon matSuffix (click)="hide = !hide">
+                {{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </mat-form-field>
+
         </div>
         <div class="col-md-12 col-sm-12" >
-          <mat-form-field style="margin:10px; width:250px" appearance="fill">
-            <mat-label>סיסמה</mat-label>
-            <input matInput [type]="hide ? 'password' : 'text'" [(ngModel)]="updateTechnician.userPassword" [formControl]="TechnicianForm.get('password')"   required>
-            <mat-icon matSuffix (click)="hide = !hide">
-              {{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-          </mat-form-field>
+        
 
           <mat-form-field style="margin:10px; width:250px" appearance="fill" >
               <mat-label>תפקיד טכנאי</mat-label>
@@ -52,6 +54,10 @@
 
               </mat-select>
           </mat-form-field>
+
+          <mat-icon (click)="fileInput.click()">add_a_photo</mat-icon>
+          <input #fileInput formControlName="userImage" type="button" [(ngModel)]="updateTechnician.image" (click)="onFileInput()"  style="display:none;" />
+
 
 
 
